# XSWL-C

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Windows  README.md  README.zh-CN.md  main.c  test_all.cpp  test_gui_event_regs.S  test_gui_events.S  test_gui_large_file.S  test_native_fixture.txt  test_native_fork.S  test_native_posix.S  test_native_smoke.S  test_tui.S  test_unicorn.c  test_xj380.S  xj380_emu.c  xj380_emu.h  xj380_gui.c  xj380_gui.h
src/: main.c  xj380_emu.c  xj380_emu.h  xj380_gui.c  xj380_gui.h  xj380_native.c  xj380_native.h
